# gstreamed_rust_inference

./: .gitignore  Cargo.toml  README.md
_perf_data/: A_candle_cpu.txt  A_ort_cuda.txt  B_candle_cpu.txt  B_candle_cuda.txt  B_ort_cpu.txt  B_ort_cuda.txt  candle_cuda.txt  ort_cpu.txt
gstreamed_candle/: Cargo.toml
gstreamed_candle/src/: buffer_processor.rs  coco_classes.rs  discovery.rs  frame_times.rs  inference.rs  main.rs  pipeline.rs  yolov8.rs
gstreamed_common/: Cargo.toml
gstreamed_common/src/: annotate.rs  bbox.rs  coco_classes.rs  frame_times.rs  img_dimensions.rs  lib.rs  pipeline.rs
gstreamed_ort/: Cargo.toml
gstreamed_ort/src/: inference.rs  main.rs  process_image.rs  process_video.rs  yolo_parser.rs
gstreamed_tracker/: Cargo.toml
gstreamed_tracker/src/: lib.rs
src/: discovery.rs  inference.rs  main.rs  pipeline.rs
