[package]
name = "gstreamed_candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
candle-core = { version = "0.2.1", features = ["mkl"] }
candle-nn = { version = "0.2.1" }
candle-transformers = { version = "0.2.1" }
clap = { version = "4.4.3", features = ["derive"] }
gstreamer = { version = "0.21.0" }
image = { version = "0.24.7" }