[workspace]
resolver = "2"
members = [
    "gstreamed_candle",
    "gstreamed_common",
    "gstreamed_tracker",
    "gstreamed_ort",
]

[workspace.dependencies]
# internal dependencies
gstreamed_common = { path = "gstreamed_common" }
gstreamed_tracker = { path = "gstreamed_tracker" }
# external dependencies
gstreamer = { version = "0.23.0" }
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = { version = "0.25.0", default-features = false }
