[package]
name = "gstreamed_candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
gstreamed_common.workspace = true
# ext
anyhow = { version = "1.0.75", features = ["backtrace"] }
candle-core = { version = "0.6.0", features = ["cuda", "cudnn"] }
candle-nn = { version = "0.6.0", features = ["cuda"] }
clap = { version = "4.4.3", features = ["derive"] }
gstreamer.workspace = true
hf-hub = "0.3.2"
image.workspace = true
log = "0.4.22"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
