[package]
name = "gstreamed_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = { version = "0.2.28" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
gstreamer = { version = "0.23.0" }
gstreamer-pbutils = { version = "0.23.0" }
gstreamer-video = { version = "0.23.0" }
image.workspace = true
imageproc.workspace = true
log = "0.4.22"
