[package]
name = "gstreamed_ort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
gstreamed_common.workspace = true
gstreamed_tracker.workspace = true
# ext
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.3", features = ["derive"] }
fast_image_resize = { version = "4.2.1", features = ["image"] }
gstreamer.workspace = true
image.workspace = true
imageproc.workspace = true
log = "0.4.22"
ndarray = { version = "0.16.1" }
ort = { version = "2.0.0-rc.5", default-features = false, features = ["ndarray", "download-binaries", "copy-dylibs", "cuda"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
