[package]
name = "gstreamed_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
gstreamed_common = { path = "../gstreamed_common" }
# ext
anyhow = { version = "1.0.75", features = ["backtrace"] }
gstreamer.workspace = true
image.workspace = true
imageproc.workspace = true
log = "0.4.22"
